--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+Version 1.1.0
+
+    Fixed the script loading to use UTF-8 encoding (Yasuhiro Matsumoto).
+
+    Added check for system proxy setting (Yasuhiro Matsumoto).
+
+    Fixed building with Cygwin and Qt 4.5 (John Dalton).
+
+    Added a new example: driver for QUnit tests (Łukasz Korecki).
+
+    Fixed issue #20: problem with JPG transparent color (Alessandro Portale).
+
 2011-01-17: Version 1.0.0
 
     Initial launch.
