--- a/ChangeLog
+++ b/ChangeLog
@@ -20,6 +20,8 @@ Version 1.1.0
 
     Added a new example: using Canvas to produce the color wheel (Ariya Hidayat).
 
+    Added support for rasterizing as GIF image (Ariya Hidayat).
+
 2011-01-17: Version 1.0.0
 
     Initial launch.
