--- a/ChangeLog
+++ b/ChangeLog
@@ -22,6 +22,8 @@ Version 1.1.0
 
     Added support for rasterizing as GIF image (Ariya Hidayat).
 
+    Added support for CoffeeScript (Ariya Hidayat).
+
 2011-01-17: Version 1.0.0
 
     Initial launch.
