--- a/ChangeLog
+++ b/ChangeLog
@@ -26,7 +26,17 @@ Version 1.1.0
 
     Fixed issue #19: option for setting the proxy (Clint Berry, Ariya Hidayat).
 
+    Python implementation using PyQt (James Roe).
+
+    Fixed issue #17: Specify paper size for PDF export (Alessandro Portale).
+
     Fixed issue #60: Win32 and OS/2 icon files (Salvador Parra Camacho).
+
+    Added clipping rectangle to the render function (Wouter de Bie).
+
+    Added an example on sychronous waiting (Gabor Torok).
+
+    Added command line option to use disk cache (Jon Turner).
 
 2011-01-17: Version 1.0.0
 
