--- a/ChangeLog
+++ b/ChangeLog
@@ -38,6 +38,8 @@ Version 1.1.0
 
     Added command line option to use disk cache (Jon Turner).
 
+    Added text extracting example (Weston Ruter).
+
 2011-01-17: Version 1.0.0
 
     Initial launch.
