--- a/python/README
+++ b/python/README
@@ -29,3 +29,25 @@ Do not forget to consult the concise API Reference.
 If you want to contribute, please read the Contribution Guide.
     * http://code.google.com/p/phantomjs/wiki/ContributionGuide
     * http://dev.umaclan.com/projects/pyphantomjs/wiki/Giving_back
+
+LICENSING
+----------------
+Copyright (C) 2011 James Roe <roejames12@hotmail.com>
+
+PyPhantomJS is licensed with the GNU GPL v3.
+See the included file LICENSE for the licensing terms.
+
+ADDITIONAL INFO
+----------------
+This program is a port of PhantomJS to Python/PyQt4 (thus, PyPhantomJS).
+  1) We try to make PyPhantomJS to be as compatible with PhantomJS as possible,
+     this means having the exact same features as they do. It happens to be fully
+     compatible, with the exception of some very small things.
+  2) PyPhantomJS however, has a few differences as well:
+     * Some of the features work a little differently than PhantomJS.
+       In most of these cases, the features were only changed to improve their
+       reliability and performance, so they work more often/better, and break less.
+     * There may also be additional features present that aren't in PhantomJS.
+
+PhantomJS was written by Ariya Hidayat, and I'd like to give him a BIG thanks
+for all his work on PhantomJS! :)
