Add plugin URL to README

--- a/python/README
+++ b/python/README
@@ -30,6 +30,9 @@ If you want to contribute, please read the Contribution Guide.
     * http://code.google.com/p/phantomjs/wiki/ContributionGuide
     * http://dev.umaclan.com/projects/pyphantomjs/wiki/Giving_back
 
+You can find a list of downloadable plugins at
+    * http://dev.umaclan.com/projects/pyphantomjs/wiki/Plugins
+
 LICENSING
 ----------------
 Copyright (C) 2011 James Roe <roejames12@hotmail.com>
