Mark argparse as dependency for Python 2.6

--- a/python/INSTALL
+++ b/python/INSTALL
@@ -4,6 +4,8 @@ DEPENDENCIES
 * PyQt4 >= 4.8.0
 * Qt >= 4.7.0
 
+* python-argparse == (Python 2.6)
+
 -> Windows
    -------
    You can download the required programs here.
