--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 Please see also http://code.google.com/p/phantomjs/wiki/ReleaseNotes.
 
+Version 1.3.0
+
+    Version 1.3.0 is the next minor update. It is still in the development.
+
 2011-06-21: Version 1.2.0
 
     Version 1.2.0 is a major update. It introduces a whole set of new API.
