--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,10 @@ Version 1.3.0
 
     Version 1.3.0 is the next minor update. It is still in the development.
 
+    Examples
+
+      * Added a new example on using Modernizr to detect features.
+
 2011-06-21: Version 1.2.0
 
     Version 1.2.0 is a major update. It introduces a whole set of new API.
