--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,10 @@ Version 1.3.0
     Bug fixes
 
       * Fixed open() and POST method, without specifying the finished handler.
+    
+    New features
+      
+      * Added Filesystem API, based on CommonJS Filesystem draft specs (issue 129)
 
     Examples
 
