--- a/ChangeLog
+++ b/ChangeLog
@@ -7,12 +7,14 @@ Version 1.3.0
     Bug fixes
 
       * Fixed open() and POST method, without specifying the finished handler.
+      * Fixed script execution warning dialog (issue 165)
 
     New features
 
       * Added Filesystem API, based on CommonJS Filesystem draft specs (issue 129)
       * Presistent cookie support using --cookies=cookies.ini
       * Added callback for page initialization (issue 143)
+      * Added support to specify script and output encoding (issue 186)
 
     Examples
 
