--- a/ChangeLog
+++ b/ChangeLog
@@ -12,9 +12,10 @@ Version 1.3.0
     New features
 
       * Added Filesystem API, based on CommonJS Filesystem draft specs (issue 129)
-      * Presistent cookie support using --cookies=cookies.ini
+      * Added support for persistent cookies, using --cookies=cookies.ini
       * Added callback for page initialization (issue 143)
       * Added support to specify script and output encoding (issue 186)
+      * Added option to allow local content to do cross-domain access, using --local-access-remote
 
     Examples
 
