--- a/ChangeLog
+++ b/ChangeLog
@@ -16,6 +16,7 @@ Version 1.3.0
       * Added callback for page initialization (issue 143)
       * Added support to specify script and output encoding (issue 186)
       * Added option to allow local content to do cross-domain access, using --local-access-remote
+      * Added 'require(moduleId)', based on CommonJS Modules specs (issue 47)
 
     Examples
 
