--- a/ChangeLog
+++ b/ChangeLog
@@ -6,20 +6,25 @@ Version 1.3.0
 
     Bug fixes
 
-      * Fixed open() and POST method, without specifying the finished handler.
+      * Fixed open() and POST method, without specifying the finished handler
       * Fixed script execution warning dialog (issue 165)
+      * Added WebPage.release() to free the web page from memory (issue 154)
 
     New features
 
       * Added Filesystem API, based on CommonJS Filesystem draft specs (issue 129)
-      * Added support for persistent cookies, using --cookies=cookies.ini
+      * Added support for persistent cookies (issue 91)
       * Added callback for page initialization (issue 143)
       * Added support to specify script and output encoding (issue 186)
-      * Added option to allow local content to do cross-domain access, using --local-access-remote
+      * Added option to allow local content to do cross-domain access (issue 28)
+      * Added support to apply configurations from a JSON file (issue 180)
+      * Added a convenient WebPage initialization construction (issue 206)
+      * Added option to limit the size of disk cache (issue 220)
 
     Examples
 
-      * Added a new example on using Modernizr to detect features.
+      * Added a new example on using Modernizr to detect features (issue 144)
+      * Fixed pizza.js example to use Mobile Yelp (issue 200)
 
 2011-06-21: Version 1.2.0
 
