--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 Please see also http://code.google.com/p/phantomjs/wiki/ReleaseNotes.
 
-Version 1.3.0
+2011-09-23: Version 1.3.0
 
     Version 1.3.0 is the next minor update. It is still in the development.
 
