--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 Please see also http://code.google.com/p/phantomjs/wiki/ReleaseNotes.
 
-2011-09-23: Version 1.3.0
+2011-09-23: Version 1.3.0 "Water Lily"
 
     Version 1.3.0 is the next minor update. It is still in the development.
 
@@ -31,7 +31,7 @@ Please see also http://code.google.com/p/phantomjs/wiki/ReleaseNotes.
       * Fixed pizza.js example to use Mobile Yelp (issue 200)
       * Added an example to show live network traffic (issue 227)
 
-2011-06-21: Version 1.2.0
+2011-06-21: Version 1.2.0 "Birds of Paradise"
 
     Version 1.2.0 is a major update. It introduces a whole set of new API.
 
@@ -57,7 +57,7 @@ Please see also http://code.google.com/p/phantomjs/wiki/ReleaseNotes.
       * Added a new example to sniff network traffic and save it in HAR format
 
 
-2011-04-27: Version 1.1.0
+2011-04-27: Version 1.1.0 "Cherry Blossom"
 
     Fixed the script loading to use UTF-8 encoding (Yasuhiro Matsumoto).
 
