--- a/ChangeLog
+++ b/ChangeLog
@@ -2,8 +2,6 @@ Please see also http://code.google.com/p/phantomjs/wiki/ReleaseNotes.
 
 2011-09-23: Version 1.3.0 "Water Lily"
 
-    Version 1.3.0 is the next minor update. It is still in the development.
-
     Bug fixes
 
       * Fixed open() and POST method, without specifying the finished handler
@@ -14,7 +12,7 @@ Please see also http://code.google.com/p/phantomjs/wiki/ReleaseNotes.
 
     New features
 
-      * Added Filesystem API, based on CommonJS Filesystem draft specs (issue 129)
+      * Introduced file system API based on CommonJS Filesystem proposal (issue 129)
       * Added support for persistent cookies (issue 91)
       * Added event handling, currently only for mouse events (issue 234)
       * Added page scroll position (issue 162)
