--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 Please see also http://code.google.com/p/phantomjs/wiki/ReleaseNotes.
 
+Development: Version 1.3.1
+
+    Bug fixes
+
+      * PyPhantomJS: Fix bug in CookieJar where QSettings expected str, but got QByteArray instead (PyPhantomJS issue 10)
+
 2011-09-23: Version 1.3.0 "Water Lily"
 
     Bug fixes
