--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,22 @@
 Please see also http://code.google.com/p/phantomjs/wiki/ReleaseNotes.
 
-Development: Version 1.3.1
+2011-12-22: Version 1.4.0 "Glory of the Snow"
+
+    New features
+
+      * Added embedded HTTP server (issue 115)
+	  * Added convenient build script for Linux (issue 197)
+	  * Added support for SOCKS5 proxy (issue 266)
 
     Bug fixes
 
-      * PyPhantomJS: Fix bug in CookieJar where QSettings expected str, but got QByteArray instead (PyPhantomJS issue 10)
+	  * Fix potential crash in QUrl with Qt 4.8 (issue 304)
+      * Fix bug in CookieJar with QSettings and string (PyPhantomJS issue 10)
+
+    Examples
+
+      * Added a new example to detect browsers sniffing (issue 263)
+	  * Added HTTP server example (issue 115)
 
 2011-09-23: Version 1.3.0 "Water Lily"
 
