--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
-Please see also http://code.google.com/p/phantomjs/wiki/ReleaseNotes.
+Please see also http://phantomjs.org/releases.html.
 
-Version 1.7.0
+2012-09-22: Version 1.7.0
 
     New features
 
