Stub for 1.8 changes.
http://code.google.com/p/phantomjs/issues/detail?id=863

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 Please see also http://phantomjs.org/releases.html.
 
+2012-12-21: Version 1.8.0
+
+    New features
+
+      * To be written
+
+    Improvements
+
+      * To be written
+
 2012-09-22: Version 1.7.0
 
     New features
