--- a/ChangeLog
+++ b/ChangeLog
@@ -4,13 +4,16 @@ Please see also http://phantomjs.org/releases.html.
 
     New features
 
+      * Added the ability to abort network requests (issue 230)
       * Added system access to stdin, stdout, and stderr (issue 333)
       * Added seek function to the File stream (issue 937)
       * Implemented file read for a specified number of bytes (issue 938)
+      * Added a callback to handle network error (issue 954)
 
     Improvements
 
       * Ensured a consistent 72 dpi for Linux headless rendering (issue 659)
+      * Improved the autocomplete internal of the interactive/REPL mode (issue 943)
 
 2012-12-21: Version 1.8.0
 
