--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 Please see also http://phantomjs.org/releases.html.
 
+2013-01-06: Version 1.8.1
+
+    Critical bug fix:
+
+      * Mac OS X: Fix possible crash when using some TrueType fonts (issue 690)
+
 2012-12-21: Version 1.8.0
 
     New features
