--- a/ChangeLog
+++ b/ChangeLog
@@ -12,8 +12,10 @@ Please see also http://phantomjs.org/releases.html.
 
     Improvements
 
+      * Fixed the build on FreeBSD (issue 597)
       * Ensured a consistent 72 dpi for Linux headless rendering (issue 659)
       * Improved the autocomplete internal of the interactive/REPL mode (issue 943)
+      * Changed Linux binary package setup to be built on CentOS 5 (issue 963)
 
 2012-12-21: Version 1.8.0
 
