--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,7 @@ Please see also http://phantomjs.org/releases.html.
 
       * Fixed the build on FreeBSD (issue 597)
       * Ensured a consistent 72 dpi for Linux headless rendering (issue 659)
+      * Fixed crash when uploading non existing files (issue 941)
       * Improved the autocomplete internal of the interactive/REPL mode (issue 943)
       * Changed Linux binary package setup to be built on CentOS 5 (issue 963)
 
