--- a/ChangeLog
+++ b/ChangeLog
@@ -4,19 +4,31 @@ Please see also http://phantomjs.org/releases.html.
 
     New features
 
+      * Added spawn and execFile to execute external programs (issue 219)
       * Added the ability to abort network requests (issue 230)
       * Added system access to stdin, stdout, and stderr (issue 333)
       * Added seek function to the File stream (issue 937)
       * Implemented file read for a specified number of bytes (issue 938)
-      * Added a callback to handle network error (issue 954)
+      * Added a callback to handle network error (issue 954, 997)
+      * Implemented require.stub() support for a factory function (issue 1044)
 
     Improvements
 
       * Fixed the build on FreeBSD (issue 597)
       * Ensured a consistent 72 dpi for Linux headless rendering (issue 659)
+      * Fixed possible PDF error due to invalid CreationDate field (issue 663)
       * Fixed crash when uploading non existing files (issue 941)
       * Improved the autocomplete internal of the interactive/REPL mode (issue 943)
       * Changed Linux binary package setup to be built on CentOS 5 (issue 963)
+      * Extended SSL ignore setting to synchronous XHR (issue 985)
+      * Fixed incorrect date handling in the cookies (issue 1068)
+
+    Examples
+
+      * Implemented a new weather example (issue 794)
+      * Fixed rendering issues in render_multi_url (issue 1021)
+      * Fixed proper event sequence in page_events example (issue 1028)
+      * Miscellanous tweaks (issue 1082)
 
 2012-12-21: Version 1.8.0
 
