--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 Please see also http://phantomjs.org/releases.html.
 
+Version 1.9.1
+
+    Critical bug fixes:
+
+      * Fixed UTF-8 encoding with system.stdout and system.stderr (issue 11162)
+      * Ensured that onResourceReceived will be always invoked (issue 11163)
+      * Fixed module loading from an absolute path on Windows (issue 11165)
+      * Fixed typo in the command-line option for setting the cache size (11219)
+
 2013-03-20: Version 1.9.0 "Sakura"
 
     New features
