ChangeLog: Include the proxy fix.

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@ Version 1.9.1
 
     Critical bug fixes:
 
+      * Fixed problems with specifying proxy server (issue 10811, 11117)
       * Fixed UTF-8 encoding with system.stdout and system.stderr (issue 11162)
       * Ensured that onResourceReceived will be always invoked (issue 11163)
       * Fixed module loading from an absolute path on Windows (issue 11165)
