--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 Please see also http://phantomjs.org/releases.html.
 
+2013-09-06: Version 1.9.2
+
+      * Fixed graphical artifacts with transparent background on Windows (issue 11276, 11007, 11366)
+      * Updated GhostDriver to version 1.0.4 (issue 11452)
+
 2013-06-04: Version 1.9.1
 
     Critical bug fixes:
