Include 1.9.2 changes in the release note.
https://github.com/ariya/phantomjs/issues/11452

--- a/_posts/release/2013-03-20-release-1.9.md
+++ b/_posts/release/2013-03-20-release-1.9.md
@@ -78,6 +78,11 @@ Of course, the URL matching can be more complicated than these simple examples.
 *   Fixed typo in the command-line option for setting the cache size (issue [11219](https://github.com/ariya/phantomjs/issues/11219))
 *   Fixed possible crash when handling network requests (issue [11252](https://github.com/ariya/phantomjs/issues/11252), [11338](https://github.com/ariya/phantomjs/issues/11338))
 
+**Fixes in 1.9.2**
+
+*   Fixed graphical artifacts with transparent background on Windows (issue [11276](https://github.com/ariya/phantomjs/issues/11276), [11007](https://github.com/ariya/phantomjs/issues/11007), [11366](https://github.com/ariya/phantomjs/issues/11366))
+*   Updated GhostDriver to version 1.0.4 (issue [11452](https://github.com/ariya/phantomjs/issues/11452))
+
 **Known Issues on Microsoft Windows**
 
 *   Very slow network performance. The workaround is to set [proxy type](https://github.com/ariya/phantomjs/wiki/API-Reference#wiki-command-line-options) to &quot;<tt>none</tt>&quot; (issue [10580](https://github.com/ariya/phantomjs/issues/10580))
