fixing tiny typo
+ where

--- a/_posts/documentation/get-started/2000-01-05-repl.md
+++ b/_posts/documentation/get-started/2000-01-05-repl.md
@@ -13,7 +13,7 @@ Sometimes you feel the urge to test out some little/medium size Javascript code,
 
 Well, PhantomJS is a commandline tool. It's designed for the commandline; its habitat is your console. So, as such, a way was missing to have a ready to go mode. Even Node.js has one!
 
-So, that's the idea of the REPL came from.
+So, that's where the idea of the REPL came from.
 
 ### How does it work
 
