Change git checkout command to use http: instead of git:

--- a/_posts/documentation/get-started/2000-01-02-build.md
+++ b/_posts/documentation/get-started/2000-01-02-build.md
@@ -12,7 +12,7 @@ permalink: build.html
 Install [Xcode](https://developer.apple.com/xcode/) and the necessary SDK for development (gcc, various tools, libraries, etc).
 
 ```bash
-git clone git://github.com/ariya/phantomjs.git
+git clone http://github.com/ariya/phantomjs.git
 cd phantomjs
 git checkout 1.9
 ./build.sh
@@ -27,7 +27,7 @@ This produces a static build `bin/phantomjs`. This is a self-contained executabl
 ```bash
 sudo apt-get update
 sudo apt-get install build-essential chrpath git-core libssl-dev libfontconfig1-dev
-git clone git://github.com/ariya/phantomjs.git
+git clone http://github.com/ariya/phantomjs.git
 cd phantomjs
 git checkout 1.9
 ./build.sh
@@ -39,7 +39,7 @@ git checkout 1.9
 
 ```bash
 sudo yum install gcc gcc-c++ make git openssl-devel freetype-devel fontconfig-devel
-git clone git://github.com/ariya/phantomjs.git
+git clone http://github.com/ariya/phantomjs.git
 cd phantomjs
 git checkout 1.9
 ./build.sh
@@ -61,7 +61,7 @@ cd rpm
 
 ```bash
 sudo emerge chrpath fontconfig dev-libs/openssl
-git clone git://github.com/ariya/phantomjs.git
+git clone http://github.com/ariya/phantomjs.git
 cd phantomjs
 git checkout 1.9
 ./build.sh
@@ -88,7 +88,7 @@ nmake -f ms\nt.mak install
 Get PhantomJS source code:
 
 ```bash
-git clone git://github.com/ariya/phantomjs.git
+git clone http://github.com/ariya/phantomjs.git
 cd phantomjs
 git checkout 1.9
 ```
