Added instructions for Arch Linux

--- a/_posts/documentation/get-started/2000-01-01-download.md
+++ b/_posts/documentation/get-started/2000-01-01-download.md
@@ -34,6 +34,13 @@ The binary `bin/phantomjs` is ready to use.
 
 ## Linux
 
+### Arch Linux
+
+This Linux distribution provides PhantomJS in its repository. Just type in a console:
+<code>sudo pacman -S phantomjs</code>
+
+### Other Linux distributions
+
 For 64-bit system, download [phantomjs-1.9.2-linux-x86_64.tar.bz2](https://phantomjs.googlecode.com/files/phantomjs-1.9.2-linux-x86_64.tar.bz2) (12.7 MB).
 
 For 32-bit system, download [phantomjs-1.9.2-linux-i686.tar.bz2](https://phantomjs.googlecode.com/files/phantomjs-1.9.2-linux-i686.tar.bz2) (13.0 MB).
