Update ChangeLog for 1.9.6.
https://github.com/ariya/phantomjs/issues/11905

--- a/ChangeLog
+++ b/ChangeLog
@@ -17,6 +17,10 @@ Some future version:
 
       * Netsniff example should exit when fails to load (issue 11333)
 
+2014-01-20: Version 1.9.6
+
+      * Updated GhostDriver to version 1.1.1 (issue 11877, 11893)
+
 2014-01-19: Version 1.9.3
 
       * Fixed CoreText performance note on OS X 10.9 (issue 11418)
