--- a/_posts/documentation/get-started/2000-01-01-download.md
+++ b/_posts/documentation/get-started/2000-01-01-download.md
@@ -8,11 +8,11 @@ permalink: download.html
 **Note** Binary packages are made available on a volunteer basis. There is no need to
 ask when a binary package for a given platform will be ready. The packagers are fully aware of every source release and they give their best effort to make the binaries available.
 
-Download service is kindly provided by [Google Code Project Hosting](http://code.google.com/p/phantomjs/downloads/).
+Download service is kindly provided by [Bitbucket](https://bitbucket.org/ariya/phantomjs/downloads). Previous releases download was provided by [Google Code Project Hosting](http://code.google.com/p/phantomjs/downloads/).
 
 ## Windows
 
-Download [phantomjs-1.9.2-windows.zip](https://phantomjs.googlecode.com/files/phantomjs-1.9.2-windows.zip) (6.8 MB) and extract (unzip) the content.
+Download [phantomjs-1.9.6-windows.zip](https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-1.9.6-windows.zip) (6.7 MB) and extract (unzip) the content.
 
 The executable `phantomjs.exe` is ready to use.
 
@@ -20,7 +20,7 @@ The executable `phantomjs.exe` is ready to use.
 
 ## Mac OS X
 
-Download [phantomjs-1.9.2-macosx.zip](https://phantomjs.googlecode.com/files/phantomjs-1.9.2-macosx.zip) (9.1 MB) and extract (unzip) the content.
+Download [phantomjs-1.9.6-macosx.zip](https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-1.9.6-macosx.zip) (9.0 MB) and extract (unzip) the content.
 
 The binary `bin/phantomjs` is ready to use.
 
@@ -34,9 +34,9 @@ The binary `bin/phantomjs` is ready to use.
 
 ## Linux
 
-For 64-bit system, download [phantomjs-1.9.2-linux-x86_64.tar.bz2](https://phantomjs.googlecode.com/files/phantomjs-1.9.2-linux-x86_64.tar.bz2) (12.7 MB).
+For 64-bit system, download [phantomjs-1.9.6-linux-x86_64.tar.bz2](https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-1.9.6-linux-x86_64.tar.bz2) (12.6 MB).
 
-For 32-bit system, download [phantomjs-1.9.2-linux-i686.tar.bz2](https://phantomjs.googlecode.com/files/phantomjs-1.9.2-linux-i686.tar.bz2) (13.0 MB).
+For 32-bit system, download [phantomjs-1.9.6-linux-i686.tar.bz2](https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-1.9.6-linux-i686.tar.bz2) (12.9 MB).
 
 This package is built on CentOS 5.8. It should run successfully on Lucid or more modern systems (including other distributions). There is no requirement to install Qt, WebKit, or any other libraries. It is however expected that some base libraries necessary for rendering ([FreeType](http://www.freetype.org/), [Fontconfig](http://www.freedesktop.org/wiki/Software/fontconfig)) and the basic font files are available in the system.
 
@@ -46,4 +46,4 @@ For older systems, please compile PhantomJS from source (see below).
 
 ## Source Code
 
-Download [phantomjs-1.9.2-source.zip](https://phantomjs.googlecode.com/files/phantomjs-1.9.2-source.zip) (39 MB) and follow the [build instructions]({{ site.url }}/build.html).
+Download [phantomjs-1.9.6-source.zip](https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-1.9.6-source.zip) (38.8 MB) and follow the [build instructions]({{ site.url }}/build.html).
