Mention OpenBSD's pkg_add.
We may need to split BSD family on its own once it's getting bigger.

https://github.com/ariya/phantomjs/pull/11941

--- a/_posts/documentation/get-started/2000-01-01-download.md
+++ b/_posts/documentation/get-started/2000-01-01-download.md
@@ -40,7 +40,7 @@ For 32-bit system, download [phantomjs-1.9.7-linux-i686.tar.bz2](https://bitbuck
 
 This package is built on CentOS 5.8. It should run successfully on Lucid or more modern systems (including other distributions). There is no requirement to install Qt, WebKit, or any other libraries. It is however expected that some base libraries necessary for rendering ([FreeType](http://www.freetype.org/), [Fontconfig](http://www.freedesktop.org/wiki/Software/fontconfig)) and the basic font files are available in the system.
 
-Alternatively, install the distribution-specific package using the native package manager (`apt-get` for Ubuntu and Debian, `pacman` for Arch Linux, etc). **Warning**: The distribution-specific package may not always be on the latest stable version.
+Alternatively (for Unix-like systems), install the distribution-specific package using the native package manager (`apt-get` for Ubuntu and Debian, `pacman` for Arch Linux, `pkg_add` for OpenBSD, etc). **Warning**: The distribution-specific package may not always be on the latest stable version.
 
 For older systems, please compile PhantomJS from source (see below).
 
