resourceTimeout is a very useful feature
This feature is really very useful from phantomjs to keep trying for those requests which never succeed.

--- a/_posts/api/webpage/property/2000-01-01-settings.md
+++ b/_posts/api/webpage/property/2000-01-01-settings.md
@@ -17,6 +17,7 @@ This property stores various settings of the web page:
 * `password` sets the password used for HTTP authentication.
 * `XSSAuditingEnabled` defines whether load requests should be monitored for cross-site scripting attempts (defaults to `false`).
 * `webSecurityEnabled` defines whether web security should be enabled or not (defaults to `true`).
+* `resourceTimeout` (in milli-secs) defines the timeout after which any resource requested will stop trying and proceed with other parts of the page. `onResourceTimeout` callback will be called on timeout.
 
 **Note:** The `settings` apply only during the initial call to the `page.open` function. Subsequent modification of the `settings` object will not have any impact.
 
