Updated readLine fs api sample

--- a/_posts/api/stream/method/2000-01-01-read-line.md
+++ b/_posts/api/stream/method/2000-01-01-read-line.md
@@ -14,7 +14,13 @@ Stream objects are returned from the [fs.open]({{ site.url }}/api/fs/method/open
 ```javascript
 var fs = require('fs');
 var stream = fs.open('data.xml', 'r');
-// @TODO: Finish stream.readLine example.
+
+while(!stream.atEnd()) {
+    var line = stream.readLine();
+    console.log(line);
+}
+
+fs.close();
 ```
 
 
