Adds two additional users

--- a/_posts/documentation/explore/2000-01-06-users.md
+++ b/_posts/documentation/explore/2000-01-06-users.md
@@ -33,6 +33,8 @@ The following open-source projects are using PhantomJS as part of the testing wo
 * [Media Queries](http://mediaqueri.es) uses PhantomJS to capture screenshots of sites using media queries and responsive design (source, [tweet](https://twitter.com/mediaqueries/status/202650584887730177) from Media Queries).
 * [NodeCloud](http://www.nodecloud.org) uses PhantomJS to generate screenshot of selected web sites related to Node.js.
 * [Novus](http://www.novus.com) uses PhantomJS to power reporting functionality in the real-time financial analytics product.
+* [Pageflex](http://www.pageflex.com) uses PhantomJS for web-to-print rendering solutions.
+* [Impact Marketing Solutions](http://www.solutionsbyimpact.com) uses PhantomJS for dynamic data visualization, high-resolution print graphics generation, CI testing (QUnit+JenkinsCI), screenshot capture for visual proofing and approval workflows and web-to-print rendering solutions.
 * [Pantera Commerce](http://www.panteracom.com) uses PhantomJS on Pantera Store to make large-scale e-commerce stores crawlable by search engines.
 * [Parse.ly](http://parse.ly) uses PhantomJS to generate weekly digest e-mails to writers and editors that include personalized analytics about their content; built with d3.js, Jinja2 and the PhantomJS ``render()`` function. (Source: [Whatever It Takes](http://blog.parsely.com/post/34241210620/whatever-it-takes).)
 * [Shopetti](https://www.shopetti.com) uses PhantomJS with Node.JS to generate price monitoring and sales alerts on different brands.
