Update Windows build process

--- a/_posts/documentation/get-started/2000-01-02-build.md
+++ b/_posts/documentation/get-started/2000-01-02-build.md
@@ -84,6 +84,7 @@ perl Configure VC-WIN32 no-asm --prefix=C:\openssl
 ms\do_ms
 nmake -f ms\nt.mak install
 ```
+##### * if any issues, you might need to install [ActivePerl](http://www.activestate.com/activeperl?gclid=CMGf3LeIgb0CFYc7Ogodln0AZA) and repeat steps above.
 
 Get PhantomJS source code:
 
