Windows build instruction: explicit mention of ActivePerl.
As suggested in #12040.

--- a/_posts/documentation/get-started/2000-01-02-build.md
+++ b/_posts/documentation/get-started/2000-01-02-build.md
@@ -77,6 +77,8 @@ git checkout 1.9
 
 Install [Microsoft Visual C++](http://www.microsoft.com/visualstudio/), either version 2010 or 2008 (the [Express edition](http://www.microsoft.com/visualstudio/en-us/products/2010-editions/express) should work just fine).
 
+Install [ActivePerl 5](http://www.activestate.com/activeperl/) (the free Community Edition should work fine).
+
 First step is to build OpenSSL static library. Go to [openssl.org/source](http://www.openssl.org/source/) and download the source package (tested with version 1.0.1). Unpack the package to a working directory, e.g. `C:\openssl`. Configure and build OpenSSL:
 
 ```bash
