Some more about render
talking about optionals parameters as well

--- a/_posts/api/webpage/method/2000-01-01-render.md
+++ b/_posts/api/webpage/method/2000-01-01-render.md
@@ -5,7 +5,7 @@ categories: api webpage webpage-method
 permalink: api/webpage/method/render.html
 ---
 
-`render(filename)` {void}
+`render(filename [, {format, quality}])` {void}
 
 Renders the web page to an image buffer and saves it as the specified `filename`.
 
@@ -18,12 +18,22 @@ Currently, the output format is automatically set based on the file extension.
 * JPEG
 * PDF
 
+## Quality
+
+An integer between 0 and 100.
+
+
 ## Examples
 
 ```javascript
 var webPage = require('webpage');
 var page = webPage.create();
-// @TODO: Finish page.render example.
+
+page.open("http://www.google.com", function start(status)
+{
+  page.render('google_home.jpeg', {format: 'jpeg', quality: '100'});
+  phantom.exit();
+});
 ```
 
 
