--- a/_posts/documentation/get-started/2000-01-01-download.md
+++ b/_posts/documentation/get-started/2000-01-01-download.md
@@ -52,3 +52,23 @@ For older systems, please compile PhantomJS from source (see below).
 ## Source Code
 
 Download [phantomjs-1.9.7-source.zip](https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-1.9.7-source.zip) (38.8 MB) and follow the [build instructions]({{ site.url }}/build.html).
+
+## Checksums
+
+To verify the integrity of the downloaded files, use the following checksums.
+
+### MD5 Checksums
+
+    9c1426eef5b04679d65198b1bdd6ef88 phantomjs-1.9.7-linux-i686.tar.bz2
+    f278996c3edd0e8d8ec4893807f27d71 phantomjs-1.9.7-linux-x86_64.tar.bz2
+    b8621939c7e84b17df31af215882f280 phantomjs-1.9.7-macosx.zip
+    5d308d2db7d8b494f99dbb5664447547 phantomjs-1.9.7-source.zip
+    706f4171a941dddd429dc935cb0ef7fa phantomjs-1.9.7-windows.zip
+
+### SHA-256 Checksums
+
+    2a49bb20ee4b71b8ac1837857a4dddd52f3217d1356afe58e17c5a4e4829cdb9  phantomjs-1.9.7-linux-i686.tar.bz2
+    473b19f7eacc922bc1de21b71d907f182251dd4784cb982b9028899e91dcb01a  phantomjs-1.9.7-linux-x86_64.tar.bz2
+    72731f8ff68db17ecb5f6c78bf036adb429317b9bdbe69e2f5f60514fa7e4a6f  phantomjs-1.9.7-macosx.zip
+    0f6c50ff24c1c4a8ccd7fedef62feef5e45195c7ba5ef6c84434448544877ff3  phantomjs-1.9.7-source.zip
+    5b2b1c87902fa67f23ae7b9c5f7652d1a4d81b41dc9f260b23e0f6335aa4a65e  phantomjs-1.9.7-windows.zip
