Add fs.read() example

--- a/_posts/api/fs/method/2000-01-01-read.md
+++ b/_posts/api/fs/method/2000-01-01-read.md
@@ -9,7 +9,9 @@ permalink: api/fs/method/read.html
 
 ```javascript
 var fs = require('fs');
-// @TODO: Finish fs.read example.
+var content = fs.read('/path/to/file.txt');
+
+console.log("File contains: " + content);
 ```
 
 
