fs.read: Add documentation and example.

--- a/_posts/api/fs/method/2000-01-01-read.md
+++ b/_posts/api/fs/method/2000-01-01-read.md
@@ -5,17 +5,19 @@ categories: api fs fs-method
 permalink: api/fs/method/read.html
 ---
 
+`read(path)` {string}
+
+Opens `path` and returns the entire contents as a string.
+
+
 ## Examples
 
 ```javascript
 var fs = require('fs');
-// @TODO: Finish fs.read example.
+
+var content = fs.read('file.txt');
+console.log('read data:', content);
+// @TODO: What happens with the character encoding?
 ```
-
-
-
-
-
-
 
 
