Add example for accessing URL

--- a/_posts/api/webpage/property/2000-01-01-url.md
+++ b/_posts/api/webpage/property/2000-01-01-url.md
@@ -15,7 +15,12 @@ Read-only. This property gets the current URL of the web page (main frame).
 ```javascript
 var webPage = require('webpage');
 var page = webPage.create();
-// @TODO: Finish page.url example.
+
+page.open('http://phantomjs.org', function (status) {
+  var url = page.url;
+  console.log('URL: ' + url);
+  phantom.exit();
+});
 ```
 
 
