--- a/_posts/api/fs/method/2000-01-01-exists.md
+++ b/_posts/api/fs/method/2000-01-01-exists.md
@@ -9,6 +9,15 @@ permalink: api/fs/method/exists.html
 
 ```javascript
 var fs = require('fs');
+
+// @param String dirName
+// @return boolean
+// function fs.exists(String dirName)
+
+// Example:
+if (fs.exists('phantom-directory') {
+  //  Do something...
+}
 // @TODO: Finish fs.exists example.
 ```
 
