--- a/_posts/documentation/get-started/2000-01-02-build.md
+++ b/_posts/documentation/get-started/2000-01-02-build.md
@@ -26,7 +26,7 @@ This produces a static build `bin/phantomjs`. This is a self-contained executabl
 
 ```bash
 sudo apt-get update
-sudo apt-get install build-essential chrpath git-core libssl-dev libfontconfig1-dev
+sudo apt-get install build-essential chrpath git-core libssl-dev libfontconfig1-dev libxft-dev
 git clone git://github.com/ariya/phantomjs.git
 cd phantomjs
 git checkout 1.9
