Add two more links from the wiki.

--- a/_posts/documentation/explore/2000-01-05-buzz.md
+++ b/_posts/documentation/explore/2000-01-05-buzz.md
@@ -9,6 +9,12 @@ permalink: buzz.html
 
 ## 2013
 
+Using PhantomJS WebServer (Ben Foxall, July 28, 2013)<br/>
+http://benjaminbenben.com/2013/07/28/phantomjs-webserver/
+
+Parsing PDFs at Scale with Node.js, PDF.js, and Lunr.js (Gary Sieling, May 30, 2013)<br/>
+http://www.garysieling.com/blog/parsing-pdfs-at-scale-with-node-js-pdf-js-and-lunr-js
+
 Putting the Flash back in PhantomJS (Ryan Bridges, May 21, 2013)<br />
 http://www.ryanbridges.org/2013/05/21/putting-the-flash-back-in-phantomjs/
 
