added spawn usage tip

--- a/_posts/api/child_process/method/2000-01-01-spawn.md
+++ b/_posts/api/child_process/method/2000-01-01-spawn.md
@@ -8,7 +8,17 @@ permalink: api/child_process/method/spawn.html
 ## Examples
 
 ```javascript
-// @TODO: Finish child_process » method » spawn example.
+var page  = require('page').create();
+var spawn = require('child_process').spawn;
+
+page.open('http://google.com', function(status){
+  if( status == 'success' ) {
+    page.render('/tmp/google-snapshot.jpg');
+    spawn('/usr/bin/sensible-browser', 'file:///tmp/google-snapshot.jpg');
+    phantom.exit();
+  }
+})
+
 ```
 
 
