Note the build of 1.9 vs 2.0.

--- a/_posts/documentation/get-started/2000-01-02-build.md
+++ b/_posts/documentation/get-started/2000-01-02-build.md
@@ -7,6 +7,8 @@ permalink: build.html
 
 **Warning**: Compiling PhantomJS from source takes a long time, mainly due to thousands of files in the WebKit module. With 4 parallel compile jobs on a modern machine, the entire process takes roughly 30 minutes. It is highly recommended to download and install the ready-made [binary package]({{ site.url }}/download.html) if it is available.
 
+**Note**: This is the instruction to build the stable version of PhantomJS (1.9 as of now). For the bleeding-edge version, refer to the [PhantomJS 2 wiki](https://github.com/ariya/phantomjs/wiki/PhantomJS-2).
+
 ## Mac OS X
 
 Install [Xcode](https://developer.apple.com/xcode/) and the necessary SDK for development (gcc, various tools, libraries, etc).
