added a settings variable for making the api clearer

--- a/_posts/api/webpage/method/2000-01-01-open.md
+++ b/_posts/api/webpage/method/2000-01-01-open.md
@@ -48,18 +48,18 @@ In this example, we've set the encoding to `UTF8`, and set the `Content-Type` he
 ```javascript
 var webPage = require('webpage');
 var page = webPage.create();
-var data = {
-  some: "data",
-  another: ["custom", "data"]
-};
-
-page.open('http://your.custom.api', {
-  data: data,
+var settings = {
   encoding: "utf8",
   headers: {
     "Content-Type": "application/json"
+  },
+  data: {
+    some: "data",
+    another: ["custom", "data"]
   }
-}, function(status) {
+};
+
+page.open('http://your.custom.api', settings, function(status) {
   console.log('Status: ' + status);
   // Do other things here...
 });
